--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ theme: next
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type: github
+  type: git
   repo: git@github.com:telekommunisten/unless.git
   branch: gh-pages
 
